vbnc/vbnc/tests/Errors/30311-13.vb
Class T
    Const M_Date As Date = 3S
End Class